--- a/src/KKS_Sideloader/packages.config
+++ b/src/KKS_Sideloader/packages.config
@@ -13,5 +13,5 @@
   <package id="IllusionLibs.KoikatsuSunshine.UnityEngine.UI" version="2019.4.9" targetFramework="net46" />
   <package id="IllusionLibs.XUnity.ResourceRedirector" version="4.18.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.19.0" targetFramework="net46" developmentDependency="true" />
-  <package id="SharpZipLib" version="1.3.3" targetFramework="net46" developmentDependency="true" />
+  <package id="SharpZipLib" version="1.3.3" targetFramework="net46" developmentDependency="true" allowedVersions="(,1.4)" />
 </packages>
