--- a/src/KK_Sideloader/packages.config
+++ b/src/KK_Sideloader/packages.config
@@ -8,7 +8,7 @@
   <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.4" targetFramework="net35" developmentDependency="true" />
   <package id="IllusionLibs.Koikatu.UnityEngine.UI" version="5.6.2.4" targetFramework="net35" developmentDependency="true" />
   <package id="Microsoft.Unity.Analyzers" version="1.19.0" targetFramework="net35" developmentDependency="true" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net35" developmentDependency="true" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net35" developmentDependency="true" allowedVersions="(,1.0)" />
   <package id="XUnity.Common" version="1.0.0" targetFramework="net35" developmentDependency="true" />
   <package id="XUnity.ResourceRedirector" version="1.1.0" targetFramework="net35" developmentDependency="true" />
 </packages>
