--- a/src/IMGUIModule.Il2Cpp.CoreCLR.Patcher/IMGUIModule.Il2Cpp.CoreCLR.Patcher.csproj
+++ b/src/IMGUIModule.Il2Cpp.CoreCLR.Patcher/IMGUIModule.Il2Cpp.CoreCLR.Patcher.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>IMGUIModule.Il2Cpp.CoreCLR</RootNamespace>
-    <AssemblyName>HC_IMGUIModule.Il2Cpp.CoreCLR.Patcher</AssemblyName>
+    <AssemblyName>IMGUIModule.Il2Cpp.CoreCLR.Patcher</AssemblyName>
     <OutputPath>..\..\bin\BepInEx\patchers\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <DebugType>embedded</DebugType>
@@ -20,7 +20,9 @@
   </PropertyGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Delete Files="$(OutputPath)\HC_IMGUIModule.Il2Cpp.CoreCLR.Patcher.deps.json" />
+    <Delete Files="$(OutputPath)\IMGUIModule.Il2Cpp.CoreCLR.Patcher.deps.json" />
+    <Copy SourceFiles="$(OutputPath)\IMGUIModule.Il2Cpp.CoreCLR.Patcher.dll" DestinationFiles="$(OutputPath)\HC_IMGUIModule.Il2Cpp.CoreCLR.Patcher.dll" />
+    <Copy SourceFiles="$(OutputPath)\IMGUIModule.Il2Cpp.CoreCLR.Patcher.dll" DestinationFiles="$(OutputPath)\SVS_IMGUIModule.Il2Cpp.CoreCLR.Patcher.dll" />
   </Target>
 
   <ItemGroup>
