--- a/src/KKS_Screencap/KKS_Screencap.csproj
+++ b/src/KKS_Screencap/KKS_Screencap.csproj
@@ -125,7 +125,7 @@
     <Analyzer Include="..\..\packages\Microsoft.Unity.Analyzers.1.19.0\analyzers\dotnet\cs\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
-  <Import Project="..\Core_Screencap\Core_Screencap.projitems" Label="Shared" />
+  <Import Project="..\Core_Screencap_KKEC\Core_Screencap.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
