--- a/src/HS2_Screencap/packages.config
+++ b/src/HS2_Screencap/packages.config
@@ -13,5 +13,7 @@
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.ScreenCaptureModule" version="2018.4.11.4" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.TextRenderingModule" version="2018.4.11.4" targetFramework="net46" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.UI" version="2018.4.11.4" targetFramework="net46" />
   <package id="Microsoft.Unity.Analyzers" version="1.19.0" targetFramework="net46" developmentDependency="true" />
 </packages>
